<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:clickable="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/play_button_description"
        android:onClick="playButClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTittle"
        app:srcCompat="@drawable/play_button" />

    <Switch
        android:id="@+id/gameModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:fontFamily="@font/roboto"
        android:showText="false"
        android:splitTrack="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <ImageButton
        android:id="@+id/rulesButton"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/rules_button_description"
        android:onClick="rulesButClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeSwitch"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/currentMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="319dp"
        android:layout_marginBottom="229dp"
        android:fontFamily="@font/roboto"
        android:text="@string/current_mode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameModeSwitch"
        app:layout_constraintTop_toBottomOf="@+id/appTittle" />

    <TextView
        android:id="@+id/classicMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="229dp"
        android:fontFamily="@font/roboto"
        android:text="@string/classic_mode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gameModeSwitch"
        app:layout_constraintTop_toBottomOf="@+id/appTittle" />

</androidx.constraintlayout.widget.ConstraintLayout>