<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/juicy"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="90dp"
        android:text="@string/artist"
        android:textColor="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumCover" />

    <TextView
        android:id="@+id/albumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:text="@string/album"
        android:textColor="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistTextView" />

    <TextView
        android:id="@+id/lengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:text="@string/length"
        android:textColor="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTextView" />

    <TextView
        android:id="@+id/releasedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:text="@string/released"
        android:textColor="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTextView" />

    <TextView
        android:id="@+id/songTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:text="@string/song"
        android:textColor="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumTextView" />

    <TextView
        android:id="@+id/genreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:text="@string/genre"
        android:textColor="#4A4A4A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releasedTextView" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/artistTextView"
        app:layout_constraintTop_toBottomOf="@+id/albumCover" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/lengthTextView"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/albumTextView"
        app:layout_constraintTop_toBottomOf="@+id/artist" />

    <TextView
        android:id="@+id/released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/releasedTextView"
        app:layout_constraintTop_toBottomOf="@+id/song" />

    <TextView
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/songTextView"
        app:layout_constraintTop_toBottomOf="@+id/album" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/genreTextView"
        app:layout_constraintTop_toBottomOf="@+id/released" />

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="186dp"
        android:layout_height="162dp"
        android:layout_marginTop="32dp"
        android:contentDescription="Album Cover Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitle"
        app:srcCompat="@drawable/baseline_image_black_24" />

</androidx.constraintlayout.widget.ConstraintLayout>