<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_48"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textColor="#2196F3"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lyric"
        android:layout_width="325dp"
        android:layout_height="176dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto"
        android:text="@string/test"
        android:textAlignment="center"
        android:textColor="#4A4A4A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric"
        app:srcCompat="@drawable/points100" />

    <TextView
        android:id="@+id/lyricCollectedScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/roboto"
        android:text="5"
        android:textColor="#4A4A4A"
        app:layout_constraintEnd_toStartOf="@+id/pointsValue"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric" />

    <TextView
        android:id="@+id/pointsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/roboto"
        android:text="650"
        android:textColor="#4A4A4A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric" />

    <TextView
        android:id="@+id/powerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/roboto"
        android:text="3"
        android:textColor="#4A4A4A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toEndOf="@+id/pointsValue"
        app:layout_constraintTop_toBottomOf="@+id/lyric" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/lyrics_collected"
        android:textColor="#4A4A4A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yourPointsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyricCollectedScore" />

    <TextView
        android:id="@+id/yourPointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/your_points"
        android:textColor="#4A4A4A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsValue" />

    <TextView
        android:id="@+id/powerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/power"
        android:textColor="#4A4A4A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yourPointsText"
        app:layout_constraintTop_toBottomOf="@+id/powerValue" />

    <TextView
        android:id="@+id/numberOfAttemptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:fontFamily="@font/roboto"
        android:text="@string/number_of_attempts"
        android:textColor="#4A4A4A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numberOfAttemptsValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/numberOfAttemptsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/roboto"
        android:text="9"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberOfAttemptText"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/halveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/roboto"
        android:text="@string/halve"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toTopOf="@+id/numberOfAttemptText"
        app:layout_constraintEnd_toStartOf="@+id/pointButton"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/halveButton"
        app:layout_constraintVertical_bias="0.625" />

    <TextView
        android:id="@+id/pointBoost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/point_boost"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toTopOf="@+id/numberOfAttemptText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toEndOf="@+id/halveText" />

    <ImageView
        android:id="@+id/halveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="#2196F3"
        android:clickable="true"
        android:onClick="halveButClick"
        app:layout_constraintBottom_toTopOf="@+id/numberOfAttemptText"
        app:layout_constraintEnd_toStartOf="@+id/pointButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/exo_controls_repeat_all" />

    <ImageView
        android:id="@+id/pointButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="132dp"
        android:background="#2196F3"
        android:clickable="true"
        android:onClick="pointButClick"
        app:layout_constraintBottom_toTopOf="@+id/pointBoost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyric"
        app:srcCompat="@drawable/exo_controls_repeat_one" />

</androidx.constraintlayout.widget.ConstraintLayout>